Fix language panel CSS for dark mode

--- a/src/Resources/public/sass/_languagePanel.scss
+++ b/src/Resources/public/sass/_languagePanel.scss
@@ -1,8 +1,5 @@
 .tl_language_panel {
   padding: 6px 6px 7px 0;
-  background: #f3f3f3;
-  border-top: 1px solid #fff;
-  border-bottom: 1px solid #bbb;
   text-align: right;
 }
 
